packages/markdown-core/elements/code_block_scanners.c
/* Generated by re2c 4.6 */
#include "code_block_scanners.h"

/* Shared byte-scanner configuration and lexical primitives. */






bufsize_t scan_open_code_fence(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	static const unsigned char yybm[256] = {
		  0, 192, 192, 192, 192, 192, 192, 192,
		192, 192,   0, 192, 192,   0, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		144, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 224, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192
	};
	yych = (p < remaining ? input[p] : 0);
	if (yych == '`') goto yy2;
	if (yych == '~') goto yy3;
	++p;
yy1:
	{ return 0; }
yy2:
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yych == '`') goto yy4;
	goto yy1;
yy3:
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yych == '~') goto yy6;
	goto yy1;
yy4:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 16) goto yy7;
yy5:
	p = marker;
	goto yy1;
yy6:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 32) goto yy8;
	goto yy5;
yy7:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 16) goto yy7;
	if (yych <= '\n') {
		if (yych <= 0x00) goto yy5;
		if (yych <= '\t') {
			marker = p;
			goto yy9;
		}
		marker = p;
		goto yy10;
	} else {
		if (yych == '\r') {
			marker = p;
			goto yy10;
		}
		marker = p;
		goto yy9;
	}
yy8:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 32) goto yy8;
	if (yych <= '\n') {
		if (yych <= 0x00) goto yy5;
		if (yych <= '\t') {
			marker = p;
			goto yy11;
		}
		marker = p;
		goto yy12;
	} else {
		if (yych == '\r') {
			marker = p;
			goto yy12;
		}
		marker = p;
		goto yy11;
	}
yy9:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 64) goto yy9;
	if (yych <= 0x00) goto yy5;
	if (yych >= 0x0E) goto yy5;
yy10:
	++p;
	p = marker;
	{ return (bufsize_t)(p - start); }
yy11:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy11;
	if (yych <= 0x00) goto yy5;
yy12:
	++p;
	p = marker;
	{ return (bufsize_t)(p - start); }
}

}

bufsize_t scan_close_code_fence(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	static const unsigned char yybm[256] = {
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0, 128,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		128,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		 32,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,  64,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0
	};
	yych = (p < remaining ? input[p] : 0);
	if (yych == '`') goto yy15;
	if (yych == '~') goto yy16;
	++p;
yy14:
	{ return 0; }
yy15:
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yych == '`') goto yy17;
	goto yy14;
yy16:
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yych == '~') goto yy19;
	goto yy14;
yy17:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 32) goto yy20;
yy18:
	p = marker;
	goto yy14;
yy19:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 64) goto yy21;
	goto yy18;
yy20:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 32) goto yy20;
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy18;
		if (yych <= '\t') {
			marker = p;
			goto yy22;
		}
		if (yych <= '\n') {
			marker = p;
			goto yy23;
		}
		goto yy18;
	} else {
		if (yych <= '\r') {
			marker = p;
			goto yy23;
		}
		if (yych == ' ') {
			marker = p;
			goto yy22;
		}
		goto yy18;
	}
yy21:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 64) goto yy21;
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy18;
		if (yych <= '\t') {
			marker = p;
			goto yy24;
		}
		if (yych <= '\n') {
			marker = p;
			goto yy25;
		}
		goto yy18;
	} else {
		if (yych <= '\r') {
			marker = p;
			goto yy25;
		}
		if (yych == ' ') {
			marker = p;
			goto yy24;
		}
		goto yy18;
	}
yy22:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy22;
	if (yych <= 0x08) goto yy18;
	if (yych <= '\n') goto yy23;
	if (yych != '\r') goto yy18;
yy23:
	++p;
	p = marker;
	{ return (bufsize_t)(p - start); }
yy24:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '\f') {
		if (yych <= 0x08) goto yy18;
		if (yych <= '\t') goto yy24;
		if (yych >= '\v') goto yy18;
	} else {
		if (yych <= '\r') goto yy25;
		if (yych == ' ') goto yy24;
		goto yy18;
	}
yy25:
	++p;
	p = marker;
	{ return (bufsize_t)(p - start); }
}

}
